--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -16,7 +16,7 @@
       <Filter>External\PugiXml</Filter>
     </ClCompile>
     <ClCompile Include="Source\Map.cpp" />
-    <ClCompile Include="ModulePhysics.cpp" />
+    <ClCompile Include="Source\ModulePhysics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Window.h" />
@@ -52,11 +52,9 @@
       <Filter>External\PugiXml</Filter>
     </ClInclude>
     <ClInclude Include="Source\Map.h" />
-    <ClInclude Include="ModulePhysics.h" />
-    <ClInclude Include="Globals.h" />
-    <ClInclude Include="p2Point.h" />
-    <ClInclude Include="p2List.h" />
-    <ClInclude Include="p2DynArray.h" />
+    <ClInclude Include="Source\ModulePhysics.h" />
+    <ClInclude Include="Source\p2List.h" />
+    <ClInclude Include="Source\Globals.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
