--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -27,6 +27,7 @@
     <ClCompile Include="Source\PerfTimer.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\Pathfinding.cpp" />
+    <ClCompile Include="Source\Musher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Window.h" />
@@ -78,6 +79,7 @@
     <ClInclude Include="Source\Queue.h" />
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\Pathfinding.h" />
+    <ClInclude Include="Source\Musher.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
