New enemy bat, new bat sprites

--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -28,6 +28,7 @@
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\Pathfinding.cpp" />
     <ClCompile Include="Source\Musher.cpp" />
+    <ClCompile Include="Source\Bat.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Window.h" />
@@ -80,6 +81,7 @@
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\Pathfinding.h" />
     <ClInclude Include="Source\Musher.h" />
+    <ClInclude Include="Source\Bat.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
