--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -28,6 +28,8 @@
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\Pathfinding.cpp" />
     <ClCompile Include="Source\Musher.cpp" />
+    <ClCompile Include="Source\Bat.cpp" />
+    <ClCompile Include="Source\ModuleEnemies.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Window.h" />
@@ -80,6 +82,8 @@
     <ClInclude Include="Source\Timer.h" />
     <ClInclude Include="Source\Pathfinding.h" />
     <ClInclude Include="Source\Musher.h" />
+    <ClInclude Include="Source\Bat.h" />
+    <ClInclude Include="Source\ModuleEnemies.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
