--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -16,9 +16,7 @@
     </ClCompile>
     <ClCompile Include="Source\Map.cpp" />
     <ClCompile Include="Source\ModulePhysics.cpp" />
-    <ClCompile Include="Source\Player.cpp" />
     <ClCompile Include="Source\FadeToBlack.cpp" />
-    <ClCompile Include="Source\LevelManagement.cpp" />
     <ClCompile Include="Source\PerfTimer.cpp" />
     <ClCompile Include="Source\Timer.cpp" />
     <ClCompile Include="Source\Pathfinding.cpp" />
@@ -59,6 +57,12 @@
     <ClCompile Include="Source\Intro.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="Source\LevelManagement.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Player.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Window.h" />
@@ -97,10 +101,8 @@
     <ClInclude Include="Source\p2List.h" />
     <ClInclude Include="Source\Globals.h" />
     <ClInclude Include="Source\Animation.h" />
-    <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\FadeToBlack.h" />
     <ClInclude Include="Source\Intro.h" />
-    <ClInclude Include="Source\LevelManagement.h" />
     <ClInclude Include="Source\PerfTimer.h" />
     <ClInclude Include="Source\PQueue.h" />
     <ClInclude Include="Source\Queue.h" />
@@ -140,6 +142,12 @@
     <ClInclude Include="Source\GameOver.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="Source\LevelManagement.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Player.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
@@ -162,6 +170,9 @@
     </Filter>
     <Filter Include="Scenes">
       <UniqueIdentifier>{4eca5673-1e50-465a-8fc9-48117793e985}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Entities\CheckPoints">
+      <UniqueIdentifier>{48fe75bd-cfe2-427b-abe7-75a2e400aa13}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
