--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClCompile Include="Source\LevelManagement.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Player.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
     <ClCompile Include="Source\HPotion.cpp">
       <Filter>Entities\Collectable</Filter>
     </ClCompile>
@@ -71,6 +68,12 @@
     </ClCompile>
     <ClCompile Include="Source\Portal.cpp">
       <Filter>Entities\CheckPoints</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ModulePlayer.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Player.cpp">
+      <Filter>Entities</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -154,9 +157,6 @@
     <ClInclude Include="Source\LevelManagement.h">
       <Filter>Scenes</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Player.h">
-      <Filter>Entities</Filter>
-    </ClInclude>
     <ClInclude Include="Source\HPotion.h">
       <Filter>Entities\Collectable</Filter>
     </ClInclude>
@@ -165,6 +165,12 @@
     </ClInclude>
     <ClInclude Include="Source\Portal.h">
       <Filter>Entities\CheckPoints</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ModulePlayer.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Player.h">
+      <Filter>Entities</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
