--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="Source\GuiSlider.cpp">
       <Filter>GUI</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GuiToggle.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\GuiPanel.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\App.h" />
@@ -139,7 +145,6 @@
       <Filter>External\PugiXml</Filter>
     </ClInclude>
     <ClInclude Include="Source\Globals.h" />
-    <ClInclude Include="Source\Intro.h" />
     <ClInclude Include="Source\Bat.h">
       <Filter>Entities\Enemy</Filter>
     </ClInclude>
@@ -256,6 +261,15 @@
     </ClInclude>
     <ClInclude Include="Source\GuiSlider.h">
       <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GuiToggle.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GuiPanel.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Intro.h">
+      <Filter>Scenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
