--- a/GameDev_Platformer/Game/Game.vcxproj
+++ b/GameDev_Platformer/Game/Game.vcxproj
@@ -90,6 +90,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\Bat.cpp" />
+    <ClCompile Include="Source\BigMusher.cpp" />
     <ClCompile Include="Source\CheckPoint.cpp" />
     <ClCompile Include="Source\Collectable.cpp" />
     <ClCompile Include="Source\Enemy.cpp" />
@@ -129,6 +130,7 @@
     <ClCompile Include="Source\Window.cpp" />
     <ClInclude Include="Source\Animation.h" />
     <ClInclude Include="Source\Bat.h" />
+    <ClInclude Include="Source\BigMusher.h" />
     <ClInclude Include="Source\CheckPoint.h" />
     <ClInclude Include="Source\Collectable.h" />
     <ClInclude Include="Source\Enemy.h" />
