--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -303,5 +303,8 @@
     <Filter Include="Modules">
       <UniqueIdentifier>{65327206-328c-4a47-bca9-88f401283938}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GUI\Panels">
+      <UniqueIdentifier>{a3db2d22-c245-4489-9e69-3f63fa296e47}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
