--- a/GameDev_Platformer/Game/Game.vcxproj.filters
+++ b/GameDev_Platformer/Game/Game.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="Source\BigMusher.cpp">
       <Filter>Entities\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="Source\QuestManager.cpp">
+      <Filter>QuestSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Quest.cpp">
+      <Filter>QuestSystem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\App.h" />
@@ -271,6 +277,12 @@
     <ClInclude Include="Source\BigMusher.h">
       <Filter>Entities\Enemy</Filter>
     </ClInclude>
+    <ClInclude Include="Source\QuestManager.h">
+      <Filter>QuestSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Quest.h">
+      <Filter>QuestSystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
@@ -302,6 +314,9 @@
     </Filter>
     <Filter Include="Modules">
       <UniqueIdentifier>{65327206-328c-4a47-bca9-88f401283938}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="QuestSystem">
+      <UniqueIdentifier>{a5ac55bc-c008-49db-b0fb-3d631ca60743}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
